@@ -1,3 +1,14 @@
+2013-10-30  Richard Biener  <rguenther@suse.de>
+
+	PR middle-end/57100
+	* basic-block.h (pre_and_rev_post_order_compute_fn): New function.
+	* cfganal.c (pre_and_rev_post_order_compute_fn): New function
+	as worker for ...
+	(pre_and_rev_post_order_compute): ... which now wraps it.
+	* graph.c (draw_cfg_nodes_no_loops): Use
+	pre_and_rev_post_order_compute_fn to avoid ICEing and dependence
+	on cfun.
+
 2013-10-30  Christian Bruel  <christian.bruel@st.com>
 
 	* gcc/config/sh/sh-mem.cc (sh_expand_cmpnstr): New function.
